--- a/orlab/pyproject.toml
+++ b/orlab/pyproject.toml
@@ -1,21 +1,21 @@
 [project]
-name = "ortools"
+name = "orlab"
 version = "0.1.0"
-description = "Add your description here"
+description = "OR-Tools learning laboratory"
 readme = "README.md"
 authors = [
     { name = "Richard Lack", email = "rilack@microsoft.com" }
 ]
 requires-python = ">=3.12"
 dependencies = [
-    "ortools",
+    "ortools>=9.0",
     "jupyter",
     "ipython",
     "ipykernel",
 ]
 
 [project.scripts]
-ortools = "ortools:main"
+orlab = "orlab:main"
 
 [build-system]
 requires = ["uv_build>=0.8.13,<0.9.0"]
